# Oracle_Simbwatta

./: .gitignore  10_full_pipeline copy 2.ipynb  COMPLIANCE_CHECKLIST.md  Dockerfile.api  Dockerfile.worker  MCI_PLATFORM_ARCHITECTURE_RPI5_OMV_DOCKER_UV.md  README.md  SCHEMA_READABLE_DRAFT.sql  adni3_baseline_cohort_mci(최종).csv  dummy_login_accounts_20260220.txt  nginx.conf  package-lock.json  pyproject.toml  rpi5_ssh_vscode_codex_swap_runbook.md  test13_cn모델고도화.ipynb  test14_ci모델고도화.ipynb  tsconfig.json
LLM/: conversation_log.txt  main.py  main.py.bak  main_from_pyc.py
LLM/prompts/: context_builder.py  (+2 more)
claude/: CHECKLIST.md  FILES_CREATED.md  PROGRESS_UPDATE.md  STRUCTURE.md
docker/: Dockerfile  docker-compose.yml  update-nginx-kr-allowlist.sh
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
migrations/: 000_placeholder.sql  004_mci_full_schema.sql  006_insert_dummy_data.sql  007_add_pteducat_to_patients.sql  008_add_shap_to_voice_assessments.sql
ops/: generate_synthetic_dataset.py  sanitize_local_data.sh
scripts/: apply_migrations.sh  backfill_subject_matched_csv_fields.py  copy_voice_pair_from_mch_minio.py  export_mri_result.py  import_adni_baseline.py  import_adni_baseline_v2.py  ingest_mri_folder.py  preprocess_mri_subject_antspy.py  setup_patient.py  trigger_pipeline.py  verify_match.py  verify_status.py
sim-web-service/: .gitignore  Dockerfile.worker  build.out  index.html  localhost.har  package-lock.json  package.json
src/: App.vue  main.js  main.py
vite-project/: package-lock.json
(+272 files in other folders)
